--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v1.1.5:
+- Clean video label format
+- Fix html parsing on get_tv_shows
+
 v1.1.4:
 - Fix xbmcaddon.Addon() call
 - Fix rss parsing on channel/item/description content when there is no img tag in
